@@ -1,3 +1,6 @@
+July 13, 2021
+   - DreamBlaster S2P version
+
 September 9, 2003 - BETA 0.5.3
    - Applied a patch by Andy Hefner to fix a fadeout bug in The Colonel's
      Bequest, which would hang after the sound stopped playing.
